test/library/standard/Sort/errors/sortDomainArray.sparse2.good
sortDomainArray.chpl:34: error: isSorted() is not supported on domains
